<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlwaysOnTime</string>
    <string name="settings">Settings</string>
    <string name="title_empty">You need to set a title</string>
    <string name="title_current_routine">Today\'s activities</string>
    <string name="title_section3">Section 3</string>
    <string name="title_routines">Routines</string>
    <string name="title_activities">Activities</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_new_activity">New Activity</string>
    <string name="action_new_routine">New Routine</string>
    <string name="title_activity_activity_detail">ActivityDetailActivity</string>
    <string name="title_activity_activity_edit">ActivityEditActivity</string>
	<string name="title_activity_activity_status">ActivityStatusActivity</string>
	<string name="title_activity_about">Help</string>
    <string name="activity_title">Title</string>
    <string name="activity_description">Description</string>
    <string name="activity_duration">Duration (mins)</string>
    <string name="activity_days">Days</string>
	<string name="activity_background">Background</string>
	<string name="activity_alarm">Alarm</string>
    <string name="activity_volume">Volume</string>
	<string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
	<string name="action_delete">Delete</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next_activity">Next</string>
    <string name="done">I\'m done!!!!</string>
    <string name="postpone">Postpone</string>
    <string name="dring">Snooze</string>
    <string name="up">+</string>
    <string name="down">-</string>
	<string name="yes">Yes</string>
    <string name="action_load_daily_activities">Load Activities of the Day</string>
    <string name="action_load_saved_routine">Load a Routine</string>
    <string name="title_activity_dialog_routine_activities">DialogActivities</string>
    <string name="hello_world">Hello world!</string>
	<string name="title_notification_type">Notification Type</string>
	<string name="title_postpone_time">Default postpone Time (mins)</string>
	<string name="title_end_alarm_action">End Alarm Action</string>
	<string name="summary_end_alarm_action">Action to do when the alarm is done</string>
	<string name="title_stop_alarm_method">Stop Alarm Method</string>
	<string name="summary_stop_alarm_method">How to stop alarm</string>
	<string name="pref_alarm">Alarm Settings</string>
	<string name="pref_notification">Notification Settings</string>
	<string name="pref_application">Application Settings</string>
	<string name="no">No</string>
	<string name="saved">Saved</string>
	<string name="not_saved">Can\'t be saved</string>
	<string name="cancel">Cancel</string>
	<string name="add_activity">Add an activity</string>
	<string name="confirmation_delete_activity">Delete this activity?</string>
	<string name="confirmation_delete_routine">Delete this routine?</string>
	<string name="ok">Ok</string>
	<string name="message_not_saved">Could not be saved</string>
	<string name="message_saved">Saved</string>
	<string name="title_keep_screen_on">Keep Screen On</string>
	<string name="warning_battery"> Uses more battery</string>
	<string name="filter_by_day">Filter on the day</string>
	<string name="admob_publisher_id">ca-app-pub-7999813655817518/6459194989</string>
	<string name="all_activities">All the activities</string>
	<string name="home_help"><![CDATA[&nbsp;To start your routine,<br>
								load a saved routin by clicking on the left button<br>
								load the activities of the day by clicking on the right button<br>
		Then, click on the <bold>Start</bold> button.<br>
		You can change the order of the activities by clicking on the + and - buttons on the right of each activity.<br>
		If you have changed an activity on the activities page, press the refresh button above to reload all the activities.<br>
		Press the button ? for showing/hiding this help.]]></string>
	<string name="activities_help"><![CDATA[Click the button below for adding activity<br> 
								If you have changed an activity on the activities page, you may have to press the refresh button above to reload all the activities.<br>
		Press the button ? for showing/hiding this help.]]></string>
	<string name="routines_help"><![CDATA[Click the button below for adding a routine (group of activities)<br> 
								If you have changed an activity on the activities page, you may have to press the refresh button above to reload all the activities.<br>
		Press the button ? for showing/hiding this help.]]></string>
	<string name="show_tutorials_summary">Displays tutorials at each view</string>
	<string name="show_tutorials_title">Show tutorials</string>
	<string name="help_text"><![CDATA[<p>&nbsp;This application has been developed to help you get things done on time<br>
		and to help you create routines so that you won\'t have to struggle every morning to get ready. <br></p>
	]]></string>
	<string name="help_text1"><![CDATA[			<p>&nbsp;To get started, go to the activities\'panel and start by creating activities by clicking on the button at the bottom of the application.</p>	]]></string>
<string name="help_text2"><![CDATA[	&nbsp;	Then, go to the routines\'panel. Create one by clicking on the button at the bottom, specify a title. Open the routine created, you can add, delete or change position of your activites. Save the routine. ]]></string>
<string name="help_text3"><![CDATA[		 &nbsp;Go to the home panel ab click on the routines\'button to load one of the routine. When you see the activities on the panel, you can press play to start your routine.]]></string>
	<string name="help_text4"><![CDATA[ &nbsp;You can personnalize the background of the countdown by editing your activities. You can also switch between the coutdown and the time by clicking on the title, at the top of your application.]]></string>
	<string name="help_text5"><![CDATA[ &nbsp;Long press on the center button to start the next activity, use the bottom-left button to snooze. If you don\'t do anything, the next activity will be started or the current activity will be snoozed for the time given in the activity, depending on what you choose in the settings.]]></string>
	<string name="today">Today</string>
	<string name="getting_started">Welcome to AlwaysOnTime, this application is here to help you manage your time efficiently. Let us show you a little help to get started ith your new application.</string>
	<string name="activity_about_title">Tutorial</string>
</resources>
