<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mymorningroutine.RoutineDetailActivity" >

	<item android:id="@+id/action_edit_title_routine"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/activity_title"

	/>

	<item android:id="@+id/action_add_activity_routine"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/add_activity"

	/>

	<item android:id="@+id/action_delete_routine"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="ifRoom"
        android:title="@string/action_delete"

	/>
</menu>
